creazione style header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <!--Sezione header-->
-    <header></header>
+    <header>
+        <img class="logo" src="img/logo.svg">
+    </header>
     <!--Inizio sezione main-->
     <main></main>
     <!--Sezione footer-->
