--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
         <img class="logo" src="img/logo.svg">
     </header>
     <!--Inizio sezione main-->
-    <main></main>
+    <main>
+    <!--Div Title-->
+    <div>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        Scritto da <a href="#">The Booleaner</a><br/>
+        <sub> 10/10/2020</sub>
+    </div>
+    
+    <!--Div Images-->
+    <div id="images-article">
+    <img src="img/tim-1.jpg" alt="Tim">
+    <img src="img/tim-2.jpg" alt="Tim 2">
+    <figcaption>  
+        <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br/>2nd Photo: Wikipedia, by Paul Clarke</p>   
+   </figcaption>  
+    </div>
+
+    </main>
     <!--Sezione footer-->
     <footer></footer>
     
