--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
     <div id="images-article">
     <img src="img/tim-1.jpg" alt="Tim">
     <img src="img/tim-2.jpg" alt="Tim 2">
-    <figcaption>  
+    <figcaption class="caption">  
         <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br/>2nd Photo: Wikipedia, by Paul Clarke</p>   
    </figcaption>  
     </div>
+
+    <!--Sezione articolo-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud <span class="testo-evidenziato"> exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</span>. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu fegiat nulla facilisis at vero eros et accumsan et justo odio dignissim qui blandit praesent luptatum zzril delenit augue duis te feugait nulla facilisi.</p>
+
+    <ul>
+        <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+        </li>
+        <li>
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+        </li>
+        <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+        </li>
+    </ul>
 
     </main>
     <!--Sezione footer-->
