sezione tabella e footer

--- a/index.html
+++ b/index.html
@@ -45,9 +45,50 @@
         </li>
     </ul>
 
+     <!--Sezione tabella-->
+     <table class="table">
+        <thead class="thead">
+            <tr>
+                <th class="col1">Lorem ipsum dolor</th>
+                <th class="col2">Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="row-table">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, fuga non perspiciatis, natus asperiores deleniti ab, sed unde officiis eos saepe ea ut nulla. Tenetur molestiae error fuga quo doloribus!</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, fuga non perspiciatis, natus asperiores deleniti ab, sed unde officiis eos saepe ea ut nulla. Tenetur molestiae error fuga quo doloribus!</td>
+            </tr>
+            <tr class="row-table">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, fuga non perspiciatis, natus asperiores deleniti ab, sed unde officiis eos saepe ea ut nulla. Tenetur molestiae error fuga quo doloribus!</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!--Sezione secondo paragrafo-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud  exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, <span class="testo-evidenziato">vel illum dolore eu fegiat nulla facilisis at vero eros et accumsan et justo</span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis te feugait nulla facilisi.</p>
     </main>
     <!--Sezione footer-->
-    <footer></footer>
+    <footer>
+    <h2>Potrebbero interessarti</p>
+    <div id="section-footer-1">
+        <h3 class="text-footer">Lorem ipsum dolor</h3>
+    </div>
+         
+    <div id="section-footer-2">
+        <h3 class="text-footer">Lorem ipsum dolor</h3>
+    </div>
+
+
+    </footer>
     
 </body>
 </html>
