cambio colore autore articolo

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--Div Title-->
     <div>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        Scritto da <a href="#">The Booleaner</a><br/>
-        <sub> 10/10/2020</sub>
+        <p class="Autore">Scritto da <a href="#">The Booleaner</a><br/>
+        <sub> 10/10/2020</sub></p>
     </div>
     
     <!--Div Images-->
